--- a/graj-agri/src/index.css
+++ b/graj-agri/src/index.css
@@ -13,3 +13,12 @@ html {
   scroll-behavior: smooth;
 }
 
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-box-shadow: 0 0 0px 1000px transparent inset !important;
+  -webkit-text-fill-color: #fff !important;
+  background: transparent !important;
+  transition: background-color 9999s ease-in-out 0s;
+}
